<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start_screen">Pocket Library</string>
    <string name="authors">Authors</string>
    <string name="config">Config</string>
    <string name="genres">Genres</string>
    <string name="reading">Reading</string>
    <string name="app_name">Pocket Library</string>
    <string name="books">Books</string>
    <string name="starred">Starred</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="pref_viewer">Default viewer</string>
    <string name="pref_selectViewer">Select viewer</string>
    <string name="pref_viewerType_default">internal</string>
    <string name="library_root">Library root directory</string>
    <string name="pref_libraryRootMessage">Enter library root directory (example: /mnt/sdcard/books/)</string>
    <string name="font_size">Font size</string>
    <string name="set_font_size">Set font size</string>
    <string name="goto_page">GoTo page</string>

    <string name="open_book">Open</string>
    <string name="book_open_ext">Open in external viewer</string>
    <string name="book_toggle_starred">Star/Unstar</string>
    <string name="unknown_author">Unknown</string>
    <string name="download_book">Download book</string>
    <string name="library_server">Library server</string>
    <string name="pref_serverMessage">Enter server in format (http://host:port/path/to/books)</string>
    <string name="book_not_found">Book not found</string>
    <string name="starred_books">Starred books</string>
    <string name="ext_app_not_found">External app not found</string>

</resources>
