<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference 
        android:key="pref_libraryRoot"
        android:title="@string/library_root" 
        android:dialogTitle="@string/library_root" 
        android:dialogMessage="@string/pref_libraryRootMessage"
        android:defaultValue="/mnt/sdcard/books/" 
        />
    <ListPreference
        android:key="pref_viewer"
        android:title="@string/pref_viewer"
        android:dialogTitle="@string/pref_selectViewer"
        android:entries="@array/pref_viewerType_entries"
        android:entryValues="@array/pref_viewerType_values"
        android:defaultValue="@string/pref_viewerType_default" />
    <EditTextPreference 
        android:key="pref_server"
        android:title="@string/library_server" 
        android:dialogTitle="@string/library_server" 
        android:dialogMessage="@string/pref_serverMessage"
        android:defaultValue="http://10.0.2.2:8080/" 
        />
    
    <com.rumly.pocketlibj.SeekBarPreference
            android:defaultValue="12"
            android:dialogMessage="@string/set_font_size"
            android:key="pref_fontSize"
            android:max="96"
            android:summary="12"
            android:text="sp"
            android:title="@string/font_size" />
    
</PreferenceScreen>